fix: Remove extra semicolon and align CSS properties

--- a/assets/styles/general.css
+++ b/assets/styles/general.css
@@ -8,13 +8,13 @@
 }
 
 .selectable-text, .selectable-text *, input, textarea{
-  cursor: text !important;;
+  cursor: text !important;
   -webkit-touch-callout: text !important; /* iOS Safari */
-    -webkit-user-select: text !important; /* Safari */
-     -khtml-user-select: text !important; /* Konqueror HTML */
-       -moz-user-select: text !important; /* Old versions of Firefox */
-        -ms-user-select: text !important; /* Internet Explorer/Edge */
-            user-select: text !important; /* Non-prefixed version, currently*/
+  -webkit-user-select: text !important; /* Safari */
+  -khtml-user-select: text !important; /* Konqueror HTML */
+  -moz-user-select: text !important; /* Old versions of Firefox */
+  -ms-user-select: text !important; /* Internet Explorer/Edge */
+  user-select: text !important; /* Non-prefixed version, currently*/
 }
 
 .v-application:not(.creation):not(.projects):not(.merci):not(.faq):not(.support):not(.kafoo) {
